--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
    FILES
    Ticks.msg
+   Wheels_Vel.msg
 )
 
 ## Generate services in the 'srv' folder
