--- a/package.xml
+++ b/package.xml
@@ -46,6 +46,8 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>xacro</build_depend>
+  <build_depend>urdf</build_depend>
   
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
@@ -53,6 +55,8 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>xacro</run_depend>
+  <run_depend>urdf</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
