--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,16 +49,15 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
    FILES
-   Ticks.msg
    Wheels_Vel.msg
 )
 
 ## Generate services in the 'srv' folder
- add_service_files(
-   FILES
-   VelRuota.srv
+# add_service_files(
+#   FILES
+#
 #   Service2.srv
- )
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -132,16 +131,16 @@ include_directories(
 # add_dependencies(eod_pkg ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-add_executable(tf_broadcaster src/tf_broadcaster.cpp)
-add_executable(odo src/odo.cpp)
+#add_executable(tf_broadcaster src/tf_broadcaster.cpp)
+#add_executable(odo src/odo.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(eod_pkg_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries( tf_broadcaster ${catkin_LIBRARIES} )
-target_link_libraries( odo ${catkin_LIBRARIES} )
+#target_link_libraries( tf_broadcaster ${catkin_LIBRARIES} )
+#target_link_libraries( odo ${catkin_LIBRARIES} )
 #############
 ## Install ##
 #############
