--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,10 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   message_generation
   tf
+  rviz
+  urdf
+  xacro
+  move_base
 )
 
 ## System dependencies are found with CMake's conventions
