--- a/params/costmap_common_params.yaml
+++ b/params/costmap_common_params.yaml
@@ -5,19 +5,15 @@ obstacle_range: 0.4
 raytrace_range: 0.6
 
 # indica forma del robot visto dall'alto. rettangolo 0.22x0.15
-footprint: [[-0.11,-0.75],[-0.11,0.75], [0.11, 0.75], [0.11,-0.75]]
+footprint: [ [-0.12,-0.075],[-0.12,0.075], [0.12, 0.075], [0.12,-0.075] ]
 
 # soglia minima tra il footprint e l'ostacolo
-inflation_radius: 0.08
+inflation_radius: 0.20
 
 # cambia il comportamento del robot vicino gli ostacoli: piu' o meno aggressivo
-cost_scaling_factor: 10.0
+#cost_scaling_factor: 10.0
 
 # sensore
 observation_sources: scan
 
-scan: {sensor_frame: camera_link, observation_persistence: 0.0, max_
-
-obstacle_height: 0.4, min_obstacle_height: 0.0, data_type: LaserScan,
-
-topic: /scan, marking: true, clearing: true}
+scan: {sensor_frame: camera_link, observation_persistence: 0.0001, max_obstacle_height: 0.6, min_obstacle_height: 0.01, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
