Da Antonio - 9 Maggio
Launch file configurati per usare la kinect collegata al pc. 
Aggiunta cartella objects per il riconoscimento dell'oggetto target. 
Aumentata la tolleranza nel raggiungimento della posa obiettivo.

--- a/params/base_local_planner_params.yaml
+++ b/params/base_local_planner_params.yaml
@@ -10,3 +10,5 @@ TrajectoryPlannerROS:
  acc_lim_x: 0.1
  #acc_lim_y: 0.0
  holonomic_robot: false
+ yaw_goal_tolerance: 0.52 # 30 gradi
+ xy_goal_tolerance: 0.15
