Stato: apparentemente funzionante
Aggiunti i file relativi all'identificazione dei motori nuovi.  Aggiunte le foto degli oggetti da identificare. Eliminato il 'bias' da ref_transformer. Aggiunto un parametro importante per il nodo robot_state_publisher. La macchina a stati funziona quasi completamente: bisogna gestire degli offset opportuni e testare completamente il braccio.

--- a/params/global_costmap_params.yaml
+++ b/params/global_costmap_params.yaml
@@ -19,7 +19,7 @@ global_costmap:
   robot_radius: 0.0
 
   # tolleranza in sec nel ritardo delle trasformazioni di tf
-  tranform_tolerance: 10.0
+  transform_tolerance: 10.0
 
   ################################ COMMON ##################
   # soglia entro la quale un ostacolo entra nella local costmap
