--- a/package.xml
+++ b/package.xml
@@ -48,6 +48,7 @@
   <build_depend>tf</build_depend>
   <build_depend>xacro</build_depend>
   <build_depend>urdf</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
   
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
@@ -57,6 +58,7 @@
   <run_depend>tf</run_depend>
   <run_depend>xacro</run_depend>
   <run_depend>urdf</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
