--- a/package.xml
+++ b/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package>
   <name>eod_pkg</name>
-  <version>0.0.0</version>
+  <version>1.0.0</version>
   <description>The eod_pkg package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="pi@todo.todo">pi</maintainer>
+  <maintainer email="todo@gmail.com">et</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>GPLv3</license>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
@@ -48,8 +48,7 @@
   <build_depend>tf</build_depend>
   <build_depend>xacro</build_depend>
   <build_depend>urdf</build_depend>
-  <build_depend>actionlib_msgs</build_depend>
-
+  
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -58,8 +57,7 @@
   <run_depend>tf</run_depend>
   <run_depend>xacro</run_depend>
   <run_depend>urdf</run_depend>
-  <run_depend>actionlib_msgs</run_depend>
-
+  
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
